--- a/pages/users.html
+++ b/pages/users.html
@@ -264,33 +264,6 @@
 			</div><!-- /.modal -->
 		</div>
 		
-		<!-- select dept -->
-		<div class="modal fade" id="selectDeptModal" tabindex="-1" role="dialog" aria-labelledby="selectDeptModalLabel" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-							<span class="fa fa-times"></span>
-						</button>
-						<h4 class="modal-title" id="myModalLabel">
-							选择组织
-						</h4>
-					</div>
-					<div class="modal-body">
-						<form role="form">
-							<div class="form-group">
-								<ul id="deptTree" class="ztree"></ul>
-							</div>
-						</form>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-						<button type="button" class="btn btn-primary" data-dismiss="modal">选择</button>
-					</div>
-				</div><!-- /.modal-content -->
-			</div><!-- /.modal -->
-		</div>
-		
 		<!-- update user -->
 		<div class="modal fade" id="updateUserModal" tabindex="-1" role="dialog" aria-labelledby="updateUserModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
@@ -319,7 +292,14 @@
 							</div>
 							<div class="form-group">
 								<label for="phone">所属单位</label>
-								<input type="text" class="form-control" id="eMail" placeholder="请输入所属单位" value="A市B区C大队">
+								<div class="input-group">
+									<input type="text" class="form-control" id="dept" readonly>
+									<span class="input-group-btn">
+										<button class="btn btn-default btn-date" type="button" data-toggle="modal" data-target="#selectDeptModal">
+											<span class="fa fa-building"></span>
+										</button>
+									</span>
+								</div>
 							</div>
 						</form>
 					</div>
@@ -327,6 +307,33 @@
 						<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
 						<button type="button" class="btn btn-default" data-dismiss="modal">密码重置</button>
 						<button type="button" class="btn btn-primary" data-dismiss="modal">保存</button>
+					</div>
+				</div><!-- /.modal-content -->
+			</div><!-- /.modal -->
+		</div>
+		
+		<!-- select dept -->
+		<div class="modal fade" id="selectDeptModal" tabindex="-1" role="dialog" aria-labelledby="selectDeptModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+							<span class="fa fa-times"></span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel">
+							选择组织
+						</h4>
+					</div>
+					<div class="modal-body">
+						<form role="form">
+							<div class="form-group">
+								<ul id="deptTree" class="ztree"></ul>
+							</div>
+						</form>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+						<button type="button" class="btn btn-primary" data-dismiss="modal">选择</button>
 					</div>
 				</div><!-- /.modal-content -->
 			</div><!-- /.modal -->
